# pytorch-book

./: pixi.toml
huang-main-code/code/p1ch4/: 4_time_series_bikes.ipynb  5_text_jane_austen.ipynb
huang-main-code/code/p1ch7/: 1_datasets.ipynb  2_birds_airplanes.ipynb
huang-main-code/code/p1ch8/: 1_convolution.ipynb
huang-main-code/code/p2ch10/: dit.ipynb  forward_diffusion.ipynb  training.ipynb
huang-main-code/code/p2ch12/: sandbox.ipynb
huang-main-code/code/p2ch13/: sandbox.ipynb
huang-main-code/code/p2ch14/: sandbox.ipynb
huang-main-code/code/p2ch15/: 1_segment_example.ipynb  2_point_prompt.ipynb  3_segment_ct_slice.ipynb  4_create_dataset.ipynb  5_fine_tuning.ipynb  6_inference.ipynb  dino_model.ipynb  dsets.py  p2ch15_explore_data.ipynb  sandbox.ipynb  utils.py
huang-main-code/code/p2ch16/: 1_motivator.ipynb  2_initialization.py  3_torchrun.py  4_collectives.py  5_ddp_from_scratch.py  6_ddp.py  7_model_parallel.py  device_mesh.ipynb  device_mesh.py  fsdp_example.py
huang-main-code/code/p2ch17/: compile_example.ipynb  fastapi_enhanced_server.py  fastapi_server.py  gradio_hello_world.py  gradio_server.py  onnx_example.ipynb  profiler_example.ipynb  quantization_example.ipynb  torch_export_example.ipynb
huang-main-code/code/p2ch17/c++/: CMakeLists.txt  README.md  example.cpp  model.py
huang-main-code/code/p2ch9/: attention.ipynb
